@@ -16,16 +16,23 @@
 // tasks.withType(GroovyCompile) { options.compilerArgs << "-Xlint:unchecked" }
 // tasks.withType(GroovyCompile) { options.compilerArgs << "-Xlint:deprecation" }
 
-apply plugin: 'groovy'
-apply plugin: 'war'
-
 version = '2.0.0'
 
-// to run use "gradle dependencyUpdates"
+apply plugin: 'groovy'
+apply plugin: 'war'
+// to run gradle-versions-plugin use "gradle dependencyUpdates"
 apply plugin: 'com.github.ben-manes.versions'
+// uncomment to add the Error Prone compiler; not enabled by default (doesn't work on Travis CI)
+// apply plugin: 'net.ltgt.errorprone'
 buildscript {
-    repositories { jcenter() }
-    dependencies { classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0' }
+    repositories {
+        jcenter()
+        // uncomment to add the Error Prone compiler: maven { url "https://plugins.gradle.org/m2/" }
+    }
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+        // uncomment to add the Error Prone compiler: classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
+    }
 }
 dependencyUpdates.resolutionStrategy = { componentSelection { rules -> rules.all { ComponentSelection selection ->
     boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier -> selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/ }
@@ -38,8 +45,8 @@ repositories {
     jcenter() // http://jcenter.bintray.com
 }
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 archivesBaseName = 'moqui'
 
 sourceSets {
@@ -107,8 +114,11 @@ dependencies {
     compile 'com.h2database:h2:1.4.192' // MPL 2.0, EPL 1.0
 
     // Apache HTTP Components
-    compile 'org.apache.httpcomponents:httpclient:4.5.2' // Apache 2.0
-    compile 'org.apache.httpcomponents:httpcore:4.4.5' // Apache 2.0
+    // compile 'org.apache.httpcomponents:httpclient:4.5.2' // Apache 2.0
+    // compile 'org.apache.httpcomponents:httpcore:4.4.5' // Apache 2.0
+
+    // Jetty HTTP Client
+    compile 'org.eclipse.jetty:jetty-client:9.3.11.v20160721' // Apache 2.0
 
     // javax.mail
     compile 'com.sun.mail:javax.mail:1.5.5' // CDDL
@@ -125,8 +135,8 @@ dependencies {
     compile 'org.parboiled:parboiled-java:1.1.7' // Apache 2.0
 
     // Apache Shiro
-    compile 'org.apache.shiro:shiro-core:1.2.6' // Apache 2.0
-    compile 'org.apache.shiro:shiro-web:1.2.6' // Apache 2.0
+    compile 'org.apache.shiro:shiro-core:1.3.0' // Apache 2.0
+    compile 'org.apache.shiro:shiro-web:1.3.0' // Apache 2.0
 
     // SLF4J, Log4J
     compile 'org.slf4j:slf4j-api:1.7.21'
@@ -163,14 +173,14 @@ dependencies {
 
     // ========== executable war dependencies ==========
     // Jetty
-    execWarRuntime 'org.eclipse.jetty:jetty-server:9.3.10.v20160621' // Apache 2.0
-    execWarRuntime 'org.eclipse.jetty:jetty-webapp:9.3.10.v20160621' // Apache 2.0
-    execWarRuntime 'org.eclipse.jetty:jetty-jndi:9.3.10.v20160621' // Apache 2.0
-    execWarRuntime module('org.eclipse.jetty.websocket:javax-websocket-server-impl:9.3.10.v20160621') // Apache 2.0
-    execWarRuntime ('org.eclipse.jetty.websocket:javax-websocket-client-impl:9.3.10.v20160621') // Apache 2.0
-    execWarRuntime ('org.eclipse.jetty.websocket:websocket-server:9.3.10.v20160621') // Apache 2.0
+    execWarRuntime 'org.eclipse.jetty:jetty-server:9.3.11.v20160721' // Apache 2.0
+    execWarRuntime 'org.eclipse.jetty:jetty-webapp:9.3.11.v20160721' // Apache 2.0
+    execWarRuntime 'org.eclipse.jetty:jetty-jndi:9.3.11.v20160721' // Apache 2.0
+    execWarRuntime module('org.eclipse.jetty.websocket:javax-websocket-server-impl:9.3.11.v20160721') // Apache 2.0
+    execWarRuntime ('org.eclipse.jetty.websocket:javax-websocket-client-impl:9.3.11.v20160721') // Apache 2.0
+    execWarRuntime ('org.eclipse.jetty.websocket:websocket-server:9.3.11.v20160721') // Apache 2.0
     // only include this if using Endpoint and MessageHandler annotations:
-    // execWarRuntime ('org.eclipse.jetty:jetty-annotations:9.3.10.v20160621') // Apache 2.0
+    // execWarRuntime ('org.eclipse.jetty:jetty-annotations:9.3.11.v20160721') // Apache 2.0
 }
 
 // setup task dependencies to make sure the start sourceSets always get run
@@ -186,7 +196,6 @@ test {
     systemProperty 'moqui.conf', 'conf/MoquiDevTestConf.xml'
     systemProperty 'moqui.init.static', 'true'
     maxHeapSize = "512M"
-    jvmArgs '-XX:MaxPermSize=192m'
 
     testLogging.showStandardStreams = true
     testLogging.showExceptions = true
